# deal_data_extractor

./: .env  .env.example  .gitignore  README.md  actTrd_mt5_deals.csv  app.py  database.py  deals.db  delete_deals.py  export_data.py  process_deals.py  pyproject.toml  run.py
libs/: manager.py
src/: main.py  migration.sql  models.py
src/deal_data_extractor/: database.py  main.py  models.py
src/deal_data_extractor/routes/: deals.py
src/deal_data_extractor/services/: create_task.py  delete_tasks.py  process_deals.py
src/deal_data_extractor/static/css/: style.css
src/deal_data_extractor/templates/: base.html  index.html  tasks_table.html  user_detail.html
src/routes/: deals.py
src/services/: create_task.py  delete_tasks.py  process_deals.py
src/templates/: base.html  tasks_table.html  users.html
static/css/: style.css
